# robust-ml

./: .buildinfo  .gitignore  Changelog.md  README.md  advertrain.dependencies.cleverhans.html  advertrain.dependencies.html  advertrain.html  advertrain.training.html  architecture.html  changelog.html  genindex.html  guidelines.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  robustML.advertrain.dependencies.cleverhans.html  robustML.advertrain.dependencies.html  robustML.advertrain.html  robustML.advertrain.training.html  robustML.html  search.html  searchindex.js
.github/workflows/: documentation_deploy.yml  pull_request_check.yml  python_lib_publish.yml  python_lib_test_publish.yml
_modules/: index.html
_modules/advertrain/: metrics.html  models.html  transforms.html
_sources/: advertrain.rst.txt  advertrain.training.rst.txt  architecture.rst.txt  guidelines.rst.txt  robustML.advertrain.dependencies.cleverhans.rst.txt  robustML.advertrain.dependencies.rst.txt  robustML.advertrain.rst.txt  robustML.advertrain.training.rst.txt  robustML.rst.txt
_sources/examples/: training.ipynb.txt
_static/coverage/: class_index.html  function_index.html  index.html  status.json  z_217cc8d30aacd734_test_metrics_py.html  z_217cc8d30aacd734_test_models_py.html  z_217cc8d30aacd734_test_transforms_py.html  (+45 more)
examples/: README.html  README.md  data_all.py  training.html  training.ipynb
scripts/: build_sphinx_documentation_linux.sh  build_sphinx_documentation_win.sh  docs_requirements.txt  quality_requirements.txt  ruff_report.txt  run_quality_check.sh
(+76 files in other folders)
